--- a/package.json
+++ b/package.json
@@ -7,18 +7,11 @@
     "doc": "docs"
   },
   "scripts": {
-    "dev-server": "cd server && npm run dev",
-    "dev-client": "cd client && npm start",
-    "build-client": "cd client && npm run build",
-
+    "init": "cd client && yarn && cd ../server && yarn",
+    "build": "cd client && yarn build",
     "server": "cd server && nodemon server.js",
-    "client": "cd client && npm run start",
-    "server-install": "cd server && mv .env.example .env && npm install",
-    "client-install": "cd client && mv .env.example .env && npm install",
-
-    "init": "npm i -D nodemon concurrently && concurrently \"npm run server-install\" \"npm run client-install\"",
+    "client": "cd client && yarn start",
     "db-init": "cd server && npm run db-init",
-    "dev": "export NODE_ENV=development && concurrently \"npm run dev-server\" \"npm run dev-client\"",
     "start": "export NODE_ENV=production && cd server && npm start"
   },
   "repository": {
