--- a/server/package.json
+++ b/server/package.json
@@ -23,16 +23,17 @@
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "googleapis": "^92.0.0",
     "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.1.28",
     "nodemailer": "^6.7.2",
-    "ua-parser-js": "^1.0.2",
-    "dotenv": "^10.0.0"
+    "ua-parser-js": "^1.0.2"
   },
   "devDependencies": {
+    "nodemon": "^2.0.18",
     "prisma": "^3.1.1"
   }
 }
